# Stratum

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MULTI_SCALE_INTELLIGENCE_ARCHITECTURE.md  Makefile  PROJECT_MODULE_REVIEW.md  PROJECT_REVIEW.md  README.md  TODO.md  VERSION.yaml  config.example.yaml  install.sh  pyproject.toml  template.html
briefings/: SCOPE.md
briefings/daily/: SKILL.md  manifest.yaml
briefings/monthly/: cascade.yaml  manifest.yaml
briefings/quarterly/: cascade.yaml  manifest.yaml
briefings/weekly/: SKILL.md  cascade.yaml  manifest.yaml
briefings/yearly/: cascade.yaml  manifest.yaml
docs/: ALGORITHM_ARCHITECTURE.md  CAPABILITY_EVOLUTION.md  CONTRACT_INVENTORY.yaml  DEPLOYMENT.md  ENGINEERING_RULES.md  MCP_ADAPTER.md  README.md  SIGNAL_AWARENESS.md  STORAGE_ARCHITECTURE.md  STORAGE_BASELINE.md  TODO.md  multi-scale-intelligence-architecture.md  source-intelligence-architecture.md
docs/archive/: PROJECT_REVIEW.md
domains/robot/: domain.yaml  queries.yaml
domains/storage/: SCOPE.md  domain.yaml  queries.yaml  signal_awareness.yaml  taxonomy.yaml
schemas/: article-record.schema.json  story-cluster.schema.json
scripts/: deploy.sh  healthcheck.sh  release.sh  rollback.sh  run_daily.sh  run_deployed_daily.sh
stratum/: SCOPE.md  __init__.py  cascade.py  deployment.py
stratum/capabilities/: SCOPE.md  __init__.py  agent_tasks.py  analysis.py  context.py  db_reads.py  diagnostics.py  planning.py  registry.py  research.py  runtime.py
stratum/collectors/: SCOPE.md  __init__.py  browser.py  (+5 more)
tests/: conftest.py  test_adapter.py  test_capabilities.py  test_cascade.py  test_collectors.py  test_contract_schemas.py  test_contracts.py  test_db_seed.py  test_db_timelines.py  test_docs.py  test_domain_configs.py  test_domains.py  test_evaluation.py  test_judgments.py  test_manage.py  test_migration.py  test_module_docs.py  test_pipeline.py  test_pipeline_helpers.py  test_search.py  test_seed.py  test_service.py  test_signal.py  test_synthesis.py  test_watchlist.py
(+349 files in other folders)
